--- a/src/thank-you.html
+++ b/src/thank-you.html
@@ -52,7 +52,18 @@
           padding: 20px;
         }
         .text-center {
+          font-size: 22px;
+        }
+      }
+      @media (max-width: 360px) {
+        .wrapper {
+          padding: 15px;
+        }
+        .text-center {
           font-size: 20px;
+        }
+        .title-center {
+          font-size: 32px;
         }
       }
     </style>
