--- Auto-Git Commit ---

--- a/src/index.html
+++ b/src/index.html
@@ -173,7 +173,7 @@
                             </ul>
                             <!-- /.layout-list -->
                             <div class="layout-modal">
-                                <a href="#" class="layout-modal__link">Рассчитать стоимость</a>
+                                <a href="#" class="layout-modal__link" onclick="ym(52918375, 'reachGoal', 'cost'); return true;" id="cost">Рассчитать стоимость</a>
                             </div>
                         </div>
                         <!-- /.layout -->
@@ -198,7 +198,7 @@
                             </ul>
                             <!-- /.layout-list -->
                             <div class="layout-modal">
-                                <a href="#" class="layout-modal__link">Рассчитать стоимость</a>
+                                <a href="#" class="layout-modal__link" onclick="ym(52918375, 'reachGoal', 'cost'); return true;" id="cost">Рассчитать стоимость</a>
                             </div>
                         </div>
                         <!-- /.layout -->
@@ -225,7 +225,7 @@
                             </ul>
                             <!-- /.layout-list -->
                             <div class="layout-modal">
-                                <a href="#" class="layout-modal__link">Рассчитать стоимость</a>
+                                <a href="#" class="layout-modal__link" onclick="ym(52918375, 'reachGoal', 'cost'); return true;" id="cost">Рассчитать стоимость</a>
                             </div>
                         </div>
                         <!-- /.layout -->
@@ -252,7 +252,7 @@
                             </ul>
                             <!-- /.layout-list -->
                             <div class="layout-modal">
-                                <a href="#" class="layout-modal__link">Рассчитать стоимость</a>
+                                <a href="#" class="layout-modal__link" onclick="ym(52918375, 'reachGoal', 'cost'); return true;" id="cost">Рассчитать стоимость</a>
                             </div>
                         </div>
                         <!-- /.layout -->
@@ -277,7 +277,7 @@
                             </ul>
                             <!-- /.layout-list -->
                             <div class="layout-modal">
-                                <a href="#" class="layout-modal__link">Рассчитать стоимость</a>
+                                <a href="#" class="layout-modal__link" onclick="ym(52918375, 'reachGoal', 'cost'); return true;" id="cost">Рассчитать стоимость</a>
                             </div>
                         </div>
                         <!-- /.layout -->
@@ -292,7 +292,7 @@
                             </ul>
                             <!-- /.layout-list -->
                             <div class="layout-modal">
-                                <a href="#" class="layout-modal__link">Рассчитать стоимость</a>
+                                <a href="#" class="layout-modal__link" onclick="ym(52918375, 'reachGoal', 'cost'); return true;" id="cost">Рассчитать стоимость</a>
                             </div>
                         </div>
                         <!-- /.layout -->
@@ -338,7 +338,7 @@
                                     </div>
                                     <!-- /.slider-content -->
                                     <div class="content-button">
-                                        <button class="content__button">Заказать макет</button>
+                                        <button class="content__button" onclick="ym(52918375, 'reachGoal', 'order-layout'); return true;" id="order-layout">Заказать макет</button>
                                     </div>
                                 </div>
                                 <!-- /.slider-content -->
@@ -374,7 +374,7 @@
                                     </div>
                                     <!-- /.slider-content -->
                                     <div class="content-button">
-                                        <button class="content__button">Заказать макет</button>
+                                        <button class="content__button" onclick="ym(52918375, 'reachGoal', 'order-layout'); return true;" id="order-layout">Заказать макет</button>
                                     </div>
                                 </div>
                                 <!-- /.slider-content -->
@@ -410,7 +410,7 @@
                                     </div>
                                     <!-- /.slider-content -->
                                     <div class="content-button">
-                                        <button class="content__button">Заказать макет</button>
+                                        <button class="content__button" onclick="ym(52918375, 'reachGoal', 'order-layout'); return true;" id="order-layout">Заказать макет</button>
                                     </div>
                                 </div>
                                 <!-- /.slider-content -->
